--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,29 @@
-version: "3.8"
 #Command to run:
 #docker-compose build
 #docker-compose up -d
-services:
+#Kong email: marcus.soh.2019@sis.smu.edu.sg
+#Kong password: adminadmin
 
+
+version: "3"
+
+volumes:
+  pgdata:
+  kongadata:
+
+networks:
+  kong-net:
+    driver: bridge
+
+services:
   #################################
-  # Doctor: The Doctor Availability microservice
+  # Doctor: Availability Microservice
   #################################
   doctoravail:
     build:
       context: ./
-      dockerfile: doctor/doctor.Dockerfile
-    image: marcsoh/doctor:esd
+      dockerfile: availability/doctor.Dockerfile
+    image: marcsoh/doctor:1.0
     restart: always
     environment:
       dbURL: mysql+mysqlconnector://is213@host.docker.internal:3306/clinic
@@ -23,7 +35,109 @@ services:
   # Nurse: Nurse
   ###############################################
 
-
+  
   ###############################################
   # Patient: Patient
   ###############################################
+
+  
+  
+  
+  #######################################
+  # Postgres: The database used by Kong
+  #######################################
+  kong-database:
+    image: postgres:9.6
+    restart: always
+    networks:
+      - kong-net
+    environment:
+      POSTGRES_DB: kong
+      POSTGRES_USER: kong
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "kong"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+  #######################################
+  # Kong database migration
+  #######################################
+  kong-migration:
+    image: kong:2.0.4
+    command: "kong migrations bootstrap"
+    restart: on-failure
+    networks:
+      - kong-net
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: password
+    depends_on:
+      - kong-database
+
+  #######################################
+  # Kong: The API Gateway
+  #######################################
+  kong:
+    image: kong:2.0.4
+    restart: always
+    networks:
+      - kong-net
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: password
+      KONG_PROXY_LISTEN: 0.0.0.0:8000
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001
+    depends_on:
+      - kong-migration
+    ports:
+      - "8000:8000"
+
+  #######################################
+  # Konga: Kong GUI
+  #######################################
+  konga:
+    image: pantsel/konga
+    restart: always
+    networks:
+      - kong-net
+    environment:
+      DB_ADAPTER: postgres
+      DB_HOST: kong-database
+      DB_USER: kong
+      DB_PASSWORD: password
+      DB_DATABASE: konga_db
+    depends_on:
+      - kong
+    ports:
+      - "1337:1337"
+    volumes:
+      - kongadata:/app/kongadata
+
+  #######################################
+  # Kong Service: Doctor Availability
+  #######################################
+  kong_availability:
+    image: marcsoh/doctor:1.0
+    restart: always
+    networks:
+      - kong-net
+    environment:
+      dbURL: mysql+mysqlconnector://is213@host.docker.internal:3306/clinic
+      PYTHONUNBUFFERED: 1
+    depends_on:
+      - kong
+      - doctoravail
+    # command: ["./wait-for-it.sh", :5001", "--", "python", "app.py"]  
+    # command: ["./wait-for-it.sh", "doctoravail:5001", "--", "python", "app.py"]
+
+  
