--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
   availability:
     build:
       context: ./
-      dockerfile: availability/doctor.Dockerfile
-    image: marcsoh/doctor:1.0
+      dockerfile: availability/availability.Dockerfile
+    image: marcsoh/availability:latest
     restart: always
     environment:
       dbURL: mysql+mysqlconnector://is213@host.docker.internal:3306/esd_clinic
