Made AID auto_increment for ease of use
Doctors won't have to key in AID every single time they want to add their availability in

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,8 @@
 #Command to run:
 #docker-compose build
 #docker-compose up -d
-#Kong email: marcus.soh.2019@sis.smu.edu.sg
-#Kong password: adminadmin
-
 
 version: "3.8"
-
-# volumes:
-#   pgdata:
-#   kongadata:
-
-# networks:
-#   kong-net:
-#     driver: bridge
 
 services:
   #################################
@@ -34,33 +23,50 @@ services:
   ###############################################
   # Appointment
   ###############################################
-  # appointment:
-  #   build:
-  #     context: ./
-  #     dockerfile: appointment/appointment.Dockerfile
-  #   image: marcsoh/appointment:latest
-  #   restart: always
-  #   environment:
-  #     dbURL: mysql+mysqlconnector://is213@host.docker.internal:3306/esd_clinic
-  #     PYTHONUNBUFFERED: 1
-  #   ports:
-  #     - "5000:5000"
-  
-  ###############################################
-  # Notification
-  ###############################################
-  notification:
+  appointment:
     build:
       context: ./
-      dockerfile: notification/notification.Dockerfile
-    image: marcsoh/notification:latest
+      dockerfile: appointment/appointment.Dockerfile
+    image: marcsoh/appointment:latest
     restart: always
     environment:
       dbURL: mysql+mysqlconnector://is213@host.docker.internal:3306/esd_clinic
       PYTHONUNBUFFERED: 1
     ports:
-      - "5003:5003"
+      - "5005:5005"
   
+  ###############################################
+  # Notification
+  ###############################################
+  # notification:
+  #   build:
+  #     context: ./
+  #     dockerfile: notification/notification.Dockerfile
+  #   image: marcsoh/notification:latest
+  #   restart: always
+  #   environment:
+  #     dbURL: mysql+mysqlconnector://is213@host.docker.internal:3306/esd_clinic
+  #     PYTHONUNBUFFERED: 1
+  #   ports:
+  #     - "5003:5003"
+
+  ###############################################
+  # Match
+  ###############################################
+  # match:
+  #   build:
+  #     context: ./
+  #     dockerfile: match/match.Dockerfile
+  #   image: marcsoh/match:latest
+  #   restart: always
+  #   depends_on:
+  #     - availability
+  #     - appointment
+  #   environment:
+  #     dbURL: mysql+mysqlconnector://is213@host.docker.internal:3306/esd_clinic
+  #     PYTHONUNBUFFERED: 1
+  #   ports:
+  #     - "5002:5002"
   
   
 
