--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     image: marcsoh/appointment:latest
     restart: always
     environment:
-      dbURL: mysql+mysqlconnector://is213@host.docker.internal:3306/esd_clinic
+      dbURL: mysql+mysqlconnector://is213@host.docker.internal:3306/appointment
       PYTHONUNBUFFERED: 1
     ports:
       - "5005:5005"
