yet to Docker notification and notify

--- a/notify/Dockerfile
+++ b/notify/Dockerfile
@@ -3,5 +3,5 @@ FROM python:3-slim
 WORKDIR /usr/src/app
 COPY http.reqs.txt amqp.reqs.txt ./
 RUN pip install --no-cache-dir -r http.reqs.txt -r amqp.reqs.txt
-COPY notify/notify.py notify/invokes.py notify/amqp_setup.py ./
+COPY ./notify.py ./invokes.py ./amqp_setup.py ./
 CMD [ "python", "notify.py" ]
