docker-compose notify

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,22 +90,19 @@ services:
   ###############################################
   # Notify Patient
   ###############################################
-  # notify:
-  #   build:
-  #     context: ./
-  #     dockerfile: notify/notify.Dockerfile
-  #   image: marcsoh/notify:latest
-  #   restart: always
-  #   depends_on:
-  #     - notification
-  #     - appointment
-  #     - rabbitmq
-  #   environment:
-  #     rabbit_host: rabbitmq
-  #     rabbit_port: 5672
-  #     notification_URL: http://notification:5003/notification
-  #     appointment_URL: http://appointment:5005/appointment
-  #     PYTHONUNBUFFERED: 1
-  #   ports:
-  #     - "5006:5006"
+  notify:
+    build:
+      context: ./
+      dockerfile: notify/notify.Dockerfile
+    image: marcsoh/notify:latest
+    restart: always
+    depends_on:
+      - notification
+      - appointment
+    environment:
+      notification_URL: http://notification:5003/notification
+      appointment_URL: http://appointment:5005/appointment
+      PYTHONUNBUFFERED: 1
+    ports:
+      - "5006:5006"
   
